--- a/Footstore/Admin/Formulaire_Add_order.html
+++ b/Footstore/Admin/Formulaire_Add_order.html
@@ -121,7 +121,7 @@
             <!-- Users Link -->
             <a
               class="flex items-center px-6 py-2 mt-4 text-gray-500 hover:bg-gray-700 hover:bg-opacity-25 hover:text-gray-100 text-xl transform hover:rotate-3 hover:scale-110 transition-all duration-300 ease-in-out ml-4"
-              href="User.html"
+              href="User.php"
             >
               <span class="mx-3">Users</span>
             </a>
@@ -129,7 +129,7 @@
             <!-- Product Link -->
             <a
               class="flex items-center px-6 py-2 mt-4 text-gray-500 hover:bg-gray-700 hover:bg-opacity-25 hover:text-gray-100 text-xl transform hover:rotate-3 hover:scale-110 transition-all duration-300 ease-in-out ml-8"
-              href="product.html"
+              href="product.php"
             >
               <span class="mx-3">Product</span>
             </a>
@@ -137,7 +137,7 @@
             <!-- Order Link -->
             <a
               class="flex items-center px-6 py-2 mt-4 text-gray-500 hover:bg-gray-700 hover:bg-opacity-25 hover:text-gray-100 text-xl transform hover:rotate-3 hover:scale-110 transition-all duration-300 ease-in-out ml-12"
-              href="#"
+              href="order.php"
             >
               <span class="mx-3">Order</span>
             </a>
