--- a/Footstore/Admin/Formulaire_Add_Product.html
+++ b/Footstore/Admin/Formulaire_Add_Product.html
@@ -163,7 +163,7 @@
             <!-- Users Link with active state -->
             <a
               class="flex items-center px-6 py-2 mt-4 text-gray-500 hover:bg-gray-700 hover:bg-opacity-25 hover:text-gray-100 text-xl transform hover:rotate-3 hover:scale-110 transition-all duration-300 ease-in-out ml-4 active:scale-95 active:bg-gray-800"
-              href="User.html"
+              href="User.php"
             >
               <span class="mx-3">Users</span>
             </a>
@@ -171,7 +171,7 @@
             <!-- Product Link -->
             <a
               class="flex items-center px-6 py-2 mt-4 text-gray-500 hover:bg-gray-700 hover:bg-opacity-25 hover:text-gray-100 text-xl transform hover:rotate-3 hover:scale-110 transition-all duration-300 ease-in-out ml-8"
-              href="product.html"
+              href="product.php"
             >
               <span class="mx-3">Product</span>
             </a>
@@ -179,18 +179,11 @@
             <!-- Order Link -->
             <a
               class="flex items-center px-6 py-2 mt-4 text-gray-500 hover:bg-gray-700 hover:bg-opacity-25 hover:text-gray-100 text-xl transform hover:rotate-3 hover:scale-110 transition-all duration-300 ease-in-out ml-12"
-              href="#"
+              href="order.php"
             >
               <span class="mx-3">Order</span>
             </a>
 
-            <!-- Facture Link -->
-            <a
-              class="flex items-center px-6 py-2 mt-4 text-gray-500 hover:bg-gray-700 hover:bg-opacity-25 hover:text-gray-100 text-xl transform hover:rotate-3 hover:scale-110 transition-all duration-300 ease-in-out ml-16"
-              href="#"
-            >
-              <span class="mx-3">Facture</span>
-            </a>
 
             
           </nav>
